--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix build && run-p \"dev:*\"",
+    "build": "run-s \"build:*\"",
+    "build:css": "yarn run generate:css",
+    "build:remix": "remix build",
+    "dev": "yarn run build && run-p \"dev:*\"",
+    "dev:css": "yarn run generate:css --watch",
     "dev:node": "cross-env NODE_ENV=development nodemon ./server.js --watch ./server.js",
     "dev:remix": "remix watch",
+    "generate:css": "unocss \"./app/**/*.{ts,tsx}\" -o ./styles/uno.css",
     "start": "cross-env NODE_ENV=production node ./server.js"
   },
   "dependencies": {
     "@remix-run/express": "^1.6.8",
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.6.8",
+    "@unocss/reset": "^0.45.9",
+    "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
@@ -21,14 +27,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.1.26",
     "@remix-run/dev": "^1.6.8",
     "@remix-run/eslint-config": "^1.6.8",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@unocss/preset-rem-to-px": "^0.45.12",
     "eslint": "^8.20.0",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "unocss": "^0.45.9"
   },
   "engines": {
     "node": ">=14"
